2005-09-17  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1010]
	* sysdeps/unix/sockatmark.c (sockatmark): Use SIOCATMARK correctly.

	[BZ #1053]
	* debug/xtrace.sh: Add missing escape character in -? match.
	Patch by Peter Breitenlohner <peb@mppmu.mpg.de>.

	[BZ #1051]
	* wctype/wctype.h: Remove stray __END_NAMESPACE_C99.
	* stdlib/stdlib.h: Use __END_NAMESPACE_STD instead of
	__END_NAMESPACE_C99 in one place.
	* scripts/begin-end-check.pl: New file.
	Patch by Ralph Loader <suckfish@ihug.co.nz>.
	* Makefile: Add rules to run scripts/begin-end-check.pl.

2005-09-17  Andreas Jaeger  <aj@suse.de>

	* timezone/zdump.c: Include ctype.h.

2005-09-16  Andreas Jaeger  <aj@suse.de>

	[BZ #1047]
	* sysdeps/unix/sysv/linux/mips/getpagesize.c: New file.

2005-09-16  Maciej W. Rozycki  <macro@linux-mips.org>

	[BZ #933]
	* sysdeps/unix/sysv/linux/mips/brk.c (__brk): Load the number of
	the syscall immediately before invocation.
	* sysdeps/unix/sysv/linux/mips/mips64/n64/ioctl.S (__ioctl): Likewise.
	* sysdeps/unix/sysv/linux/mips/mips64/syscall.S (syscall): Likewise.

	* sysdeps/unix/sysv/linux/mips/mips64/n64/ioctl.S (__ioctl): Use
	macros to handle GP.
	* sysdeps/unix/sysv/linux/mips/mips64/syscall.S (syscall):
	Likewise.  Update inaccurate comments.

2005-09-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/spawni.c (__spawni): Automatically recognize some
	more cases when we can use vfork.

2005-08-29  Thomas Schwinge  <schwinge@nic-nac-project.de>

	[BZ #1261]
	* manual/memory.texi (Hooks for Malloc): Correct prototype of
	my_init_hook and definition of my_free_hook.

2005-09-12  Roland McGrath  <roland@redhat.com>

	[BZ #1331]
	* malloc/obstack.h [!__STDC__] (obstack_int_grow_fast): Fix misnamed
	macro argument.
	Reported by Matej Vela <vela@debian.org>.

2005-09-12  Jakub Jelinek  <jakub@redhat.com>

	* malloc/malloc.c (struct malloc_chunk): Fix comment typo.
	(public_cALLOc): For mmapped chunks and perturb_byte != 0,